Code cleanup (#307)
* code cleanup
* javadoc comments
* license