@@ -1,5 +1,5 @@
 /*
- * Copyright 2019 trivago N.V.
+ * Copyright 2023 trivago N.V.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -13,35 +13,55 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package com.trivago.cluecumber.engine.json.pojo;
 
 import com.trivago.cluecumber.engine.rendering.pages.renderering.RenderingUtils;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Objects;
 
+/**
+ * This represents a Cucumber tag.
+ */
 public class Tag {
     private String name;
 
+    /**
+     * Get the tag name.
+     *
+     * @return The name.
+     */
     public String getName() {
         return name;
     }
 
+    /**
+     * Set the tag name.
+     *
+     * @param name The tag name.
+     */
     public void setName(final String name) {
         this.name = name;
     }
 
+    /**
+     * Turns the tag into a name that can be used within a URL.
+     *
+     * @return The sanitized tag name.
+     */
     public String getUrlFriendlyName() {
         String escapedTag = RenderingUtils.escapeHTML(getName()).replace("@", "");
-        try {
-            return URLEncoder.encode(escapedTag, "UTF-8").replace("%", "");
-        } catch (UnsupportedEncodingException ignored) {
-        }
-        return escapedTag;
+        return URLEncoder.encode(escapedTag, StandardCharsets.UTF_8).replace("%", "");
     }
 
+    /**
+     * Tag comparison function.
+     *
+     * @param o The tag to compare to.
+     * @return true if the names match.
+     */
     @Override
     public boolean equals(final Object o) {
         if (this == o) return true;
@@ -50,6 +70,11 @@ public class Tag {
         return Objects.equals(name, tag.name);
     }
 
+    /**
+     * Default hash code function that hashes the tag name.
+     *
+     * @return the hash code.
+     */
     @Override
     public int hashCode() {
         return Objects.hash(name);
